css/style.css
/* custom css rules */

@font-face {
    font-family: 'Blockletter'; /*a name to be used later*/
    src: url('Blockletter.otf'); /*URL to font*/
}

body {

    height: 100%;
    font-family: "Avenir Next";
    background-color: #e3dac9;
}

h1 {
    font-size: 75px;
    font-family: "Blockletter", serif;
}

h2 {
    font-size: 50px;
    font-family: "Blockletter", serif;
}

text.legend {
    font-size: 13px;
}

text.y-axis {
    font-size: 14px;
}

label {
    margin-right: 1rem;
}

img {
    width: 100%;
    height: 100%;
}

.directors {
    width: 100%;
}

.get-margins {
    margin: 2rem 2rem 2rem 4rem;
}

#big-intro {
    position:fixed;
    padding:0;
    margin:0;
    top:0;
    left:0;
    width: 100%;
    height: 100%;
    vertical-align: bottom;
    text-align: center;
    background-image: url("img/hollywood.jpeg");
}

.intro-txt {
    font-size: 10rem;
    color: white;
}

.intro-txt-2 {
    font-size: 4rem;
    color: white;
    font-family: "Avenir Next";
}

#intro-all {
    transform: translateY(20%);
}

#guess, #guess-two {
    display:none;
    font-size: 22px;
}

#first-question, #second-question {
    display: none;
    font-size: 40px;
    text-align: center;
}

#main-visual, #main-visual-2, #full-intro, #intro-vid {
    display: none;
}

#intro-vid {
    position:fixed;
    padding:0;
    margin:0;
    top:0;
    left:0;
    width: 100%;
    height: 100%;
    background-color: black;
}

#comic {
    width: 100%;
}

#number-input {
    width: 200px;
    line-height: 100px;
    font-size: 100px;
    text-align: center;
}

#enter-site {
    width: 160px;
    height: 80px;
    border-radius: 100px;
    font-size: 25px;
}

#year-input {
    width: 400px;
    line-height: 100px;
    font-size: 100px;
    text-align: center;
}

#intro {
    font-size: 22px;
}

#top-10-movie-revenue{
    font-size: 22px;
}
#top-10-movie-bechdel {
    font-size: 22px;
}

#show-answer, #show-answer-2 {
    font-size: 40px;
    background-color: #EEE4D7;
    padding: 20px;
    border-radius: 25px;
}

#credits, #about {
    background-color: #EEE4D7;
    padding: 10px;
    border-radius: 25px;
}

#answer-one, #answer-two {
    display: none;
}

#button3, #button4, #button6 {
    margin:auto;
    display:block;
}

#time-data-analysis {
    margin-top: 2rem;
    margin-right: 2rem;
}

#time-data-analysis p {
    display: inline;
}

#breakdown {
    background-color: #EEE4D7;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 25px;
    margin-bottom: 20px;
}


/*********************/
/*  TOOLTIP OVERLAY  */
/*********************/

.tooltip-title {
    display: block;
    margin-bottom: 5px;
    font-weight: 600;
}

.d3-tip {
    line-height: 1;
    padding: 12px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 2px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
    box-sizing: border-box;
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: rgba(0, 0, 0, 0.8);
    content: "\25BC";
    position: absolute;
    text-align: center;
}

/* Style northward tooltips differently */
.d3-tip.n:after {
    margin: -1px 0 0 0;
    top: 100%;
    left: 0;
}

